<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/user_management"
            android:icon="@drawable/user"
            android:title="@string/user_management" />

        <item
            android:id="@+id/files"
            android:icon="@drawable/file"
            android:title="@string/files" />

        <item
            android:id="@+id/stats"
            android:icon="@drawable/reports"
            android:title="@string/stats" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>
</menu>